--- a/fastapi/.vscode/settings.json
+++ b/fastapi/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "sqltools.useNodeRuntime": false
+    "sqltools.useNodeRuntime": false,
+    "python.analysis.autoImportCompletions": true,
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
 }
