--- a/fastapi/.vscode/settings.json
+++ b/fastapi/.vscode/settings.json
@@ -2,4 +2,5 @@
     "sqltools.useNodeRuntime": false,
     "python.analysis.autoImportCompletions": true,
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
+    "python.envFile": "${workspaceFolder}/.env"
 }
