--- a/fastapi/.vscode/settings.json
+++ b/fastapi/.vscode/settings.json
@@ -1,6 +1,19 @@
 {
-    "sqltools.useNodeRuntime": false,
-    "python.analysis.autoImportCompletions": true,
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
-    "python.envFile": "${workspaceFolder}/.env"
+    "python.envFile": "${workspaceFolder}/.env",
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.enablePytestSupport": true,
+    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": true,
+    "python.testing.pytestArgs": [
+        "--vv"
+    ],
+    "python.analysis.inlayHints.pytestParameters": true,
+    "editor.rulers": [120],
+    "editor.codeActionsOnSave": {
+        "source.unusedImports": "always",
+        "source.fixAll.ruff": "always",
+    },
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true
 }
