--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -5,3 +5,8 @@ python-multipart==0.0.20
 bcrypt==4.3.0
 werkzeug==3.1.3
 alembic==1.15.1
+pytest==8.4.1
+python-jose==3.5.0
+httpcore==1.0.9
+websockets==15.0.1
+httpx==0.28.1
